# dde-kwin

./: .clog.toml  .gitignore  .project.json  .release.json  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml  abstract_client.cpp  abstract_client.h  abstract_output.cpp  abstract_output.h  accessible.h  accessibledefine.h  activation.cpp  atoms.cpp  atoms.h  client.cpp  client.h  common.pri  composite.cpp  composite.h  dbusinterface.cpp  dbusinterface.h  dde-kwin.pro  debug_console.cpp  debug_console.h  effects.cpp  effects.h  events.cpp  geometry.cpp  globalshortcuts.cpp  input.cpp  input.h  input_event_spy.cpp  input_event_spy.h  keyboard_input.cpp  killPerformance.sh  layers.cpp  (+38 more)
configures/: CMakeLists.txt  configures.pro  deepin-kwinrulesrc  kdeglobals  kglobalshortcutsrc  klaunchrc  kwin-wm-multitaskingview.desktop  kwin.multitask-view.display.dconfig.json  kwin_no_scale  kwin_no_scale.in  kwinrc  kwinrc.in  kwinrulesrc  org.deepin.displayjack.watermark.display.json  org.deepin.kwin.json  org.kde.kwin.compositing.json  org.kde.kwin.cursor.json  org.kde.kwin.decoration.titlebar.json  org.kde.kwin.drag.json  org.kde.kwin.eventtracking.json  org.kde.kwin.icbc.json  org.kde.kwin.logging.json  org.kde.kwin.multitaskview.display.json  org.kde.kwin.splitmenu.display.json  org.kde.kwin.virtualterminal.switch.json  org.kde.kwin.xwayland.json
deepin-display/: CMakeLists.txt  com.deepin.display.service.in  display_utils.h  main.cpp
deepin-display/effects/: CMakeLists.txt  abstract_effects.cpp  abstract_effects.h  com.deepin.display.effects.xml
deepin-display/effects/wayland/: wayland_effects.cpp  wayland_effects.h
deepin-display/effects/x11/: x11_effects.cpp  x11_effects.h
deepin-display/gesture/: CMakeLists.txt  abstract_gesture.cpp  abstract_gesture.h  com.deepin.display.gesture.xml
deepin-display/gesture/wayland/: wayland_gesture.cpp  wayland_gesture.h
deepin-display/gesture/x11/: x11_gesture.cpp  x11_gesture.h
deepin-display/inputdevices/: CMakeLists.txt  abstract_inputdevices.cpp  abstract_inputdevices.h  com.deepin.display.inputdevices.xml
deepin-display/inputdevices/wayland/: wayland_inputdevices.cpp  wayland_inputdevices.h
deepin-display/inputdevices/x11/: x11_inputdevices.cpp  x11_inputdevices.h
deepin-display/keyboard/: CMakeLists.txt  abstract_keyboard.cpp  abstract_keyboard.h  com.deepin.display.keyboard.xml
deepin-display/keyboard/wayland/: wayland_keyboard.cpp  wayland_keyboard.h
deepin-display/keyboard/x11/: x11_keyboard.cpp  x11_keyboard.h
deepin-display/mouse/: CMakeLists.txt  abstract_mouse.cpp  abstract_mouse.h  com.deepin.display.mouse.xml
deepin-display/mouse/wayland/: wayland_mouse.cpp  wayland_mouse.h
deepin-display/mouse/x11/: x11_mouse.cpp  x11_mouse.h
deepin-display/output/: CMakeLists.txt  abstract_output.cpp  abstract_output.h  com.deepin.display.output.xml
deepin-display/output/wayland/: wayland_output.cpp  wayland_output.h
deepin-display/output/x11/: utils.cpp  utils.h  x11_output.cpp  x11_output.h  xcbeventlistener.cpp  xcbeventlistener.h  xcbwrapper.cpp  xcbwrapper.h
deepin-display/screen/: CMakeLists.txt  abstract_screen.cpp  abstract_screen.h  com.deepin.display.screen.xml
deepin-display/screen/wayland/: wayland_screen.cpp  wayland_screen.h
deepin-display/screen/x11/: x11_screen.cpp  x11_screen.h
deepin-display/shortcut/: CMakeLists.txt  abstract_shortcut.cpp  abstract_shortcut.h  com.deepin.display.shortcut.xml
deepin-display/shortcut/wayland/: wayland_shortcut.cpp  wayland_shortcut.h
deepin-display/shortcut/x11/: x11_shortcut.cpp  x11_shortcut.h
deepin-display/tablet/: CMakeLists.txt  abstract_tablet.cpp  abstract_tablet.h  com.deepin.display.tablet.xml
deepin-display/tablet/wayland/: wayland_tablet.cpp  wayland_tablet.h
deepin-display/tablet/x11/: x11_tablet.cpp  x11_tablet.h
deepin-display/touch/: CMakeLists.txt  abstract_touch.cpp  abstract_touch.h  com.deepin.display.touch.xml
deepin-display/touch/wayland/: wayland_touch.cpp  wayland_touch.h
deepin-display/touch/x11/: x11_touch.cpp  x11_touch.h
deepin-display/trackpoint/: CMakeLists.txt  abstract_trackpoint.cpp  abstract_trackpoint.h  com.deepin.display.trackpoint.xml
deepin-display/trackpoint/wayland/: wayland_trackpoint.cpp  wayland_trackpoint.h
deepin-display/trackpoint/x11/: x11_trackpoint.cpp  x11_trackpoint.h
deepin-watermark-dbus/: CMakeLists.txt  README.md  com.deepin.watermark.service.in  com.deepin.watermark.xml  deepin-watermark-dbus.desktop  deepinwatermark.cpp  deepinwatermark.h  displayServer.sh  main.cpp  utils.cpp  utils.h
deepin-wm-dbus/: CMakeLists.txt  com.deepin.wm.service  com.deepin.wm.service.in  com.deepin.wm.xml  com.deepin.wm.xml.in  deepin-wm-dbus.pro  deepin-wm-kwin-shortcut-one-by-one.md  deepinwmfaker.cpp  deepinwmfaker.h  main.cpp  org.kde.kwin.KWinUtils.xml.in
plugins/kdecoration/: CMakeLists.txt  chameleon.cpp  chameleon.h  chameleon.json  chameleonbutton.cpp  chameleonbutton.h  chameleonconfig.cpp  chameleonconfig.h  chameleonshadow.cpp  chameleonshadow.h  chameleonsplitmenu.cpp  chameleonsplitmenu.h  chameleontheme.cpp  chameleontheme.h  chameleonwindowtheme.cpp  chameleonwindowtheme.h  main.cpp  themes.qrc
plugins/kdecoration/translations/: splitmenu.ts  splitmenu_bo.ts  splitmenu_ca.ts  splitmenu_hu.ts  splitmenu_nl.ts  splitmenu_pl.ts  splitmenu_sq.ts  splitmenu_tr.ts  splitmenu_ug.ts  splitmenu_zh_CN.ts  splitmenu_zh_HK.ts  splitmenu_zh_TW.ts
plugins/kwin-xcb/lib/: CMakeLists.txt  dde-kwin.pc.in  kwinutils.h  (+2 more)
plugins/kwineffects/: CMakeLists.txt
tests/: CMakeLists.txt  blur_test.cc  cmake-lcov-test.sh  mockkwinutils.cpp  mockkwinutils.h  mouseDisplayTest.cpp  test-prj-running.sh  ut_mulitask_model.cpp  wayland_test.cc
windowtool/: .clang-format  CMakeLists.txt
windowtool/demo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  windowloader  windowloader.cpp
windowtool/src/: ScreenRecorder.cpp  ScreenRecorder.h  WaylandWindowLoader.cpp  WaylandWindowLoader.h  WindowInfo.h  WindowInfoLoader.cpp  WindowInfoLoader.h  XcbWindowLoader.cpp  XcbWindowLoader.h
(+1251 files in other folders)
